crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@460.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_power_10_ln VALUES (0,'NaN');"
---
InsertStmt@0..49
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..31
    Ident@12..31 "num_exp_power_10_ln"
  Whitespace@31..32 " "
  SelectStmt@32..47
    Values@32..38 "VALUES"
    Whitespace@38..39 " "
    Ascii40@39..40 "("
    List@40..47
      AConst@40..41
        Iconst@40..41 "0"
      Ascii44@41..42 ","
      AConst@42..47
        Sconst@42..47 "'NaN'"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

