crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@461.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_power_10_ln VALUES (1,'225561990715.277245515991117670624124484084762557459065170589803293759247930753528436379932442146759103295277479258327642314622036941865221478746258727236601688778946696303277607709407496616423493315166963938393760548678730128692212077086588682984700837334554241405763691119669847463520746595280034536307041368063462023793177898200220207765205127584303464304601759554817607633012272490650155253979182893585119965271975927569080191838676053084168631217591768468344106219831174026139608715965691941366334940196517120885214887008671956523579678156919416435031020452971977153991139145404842034138317592877675821045409772456977018293365238179815614004574330200783530118851005077771478448804470170641452481992602803877112958872108069738434946694089025321283178188028224338756015337492913115267362635647236447601252924834642796058');"
---
InsertStmt@0..869
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..31
    Ident@12..31 "num_exp_power_10_ln"
  Whitespace@31..32 " "
  SelectStmt@32..867
    Values@32..38 "VALUES"
    Whitespace@38..39 " "
    Ascii40@39..40 "("
    List@40..867
      AConst@40..41
        Iconst@40..41 "1"
      Ascii44@41..42 ","
      AConst@42..867
        Sconst@42..867 "'225561990715.2772455 ..."
  Ascii41@867..868 ")"
  Ascii59@868..869 ";"

