crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@462.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_power_10_ln VALUES (2,'9553718264533556311125292459627965006385666643531070061102266984368939757379.536714147420215784125170401370065894858487440153494392538261078415409784085960333028254155527328359894197540839556987826344995348426293585457768226283066583722499658006242709930685932246087653832230889613022921575445199055131152661556678809191264086381976922223866204038615136758192929883317207903579770917317641181652055458721731297347443662717939116561947785705140374908203404860090658919334137955075887697259604047657534191202566335372150375993361370075961180728155127447781364264047857624746079509591666068708743260905728661917791822925979235918475633100283148558978385583805341715868143937062092264994833222352433299015979561976964779350640064096690062929265992966564232453102431600199173711947391200249130712039686700111791790265309426741120465259677894665532560198051256215915373145226284270408649736509');"
---
InsertStmt@0..933
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..31
    Ident@12..31 "num_exp_power_10_ln"
  Whitespace@31..32 " "
  SelectStmt@32..931
    Values@32..38 "VALUES"
    Whitespace@38..39 " "
    Ascii40@39..40 "("
    List@40..931
      AConst@40..41
        Iconst@40..41 "2"
      Ascii44@41..42 ","
      AConst@42..931
        Sconst@42..931 "'95537182645335563111 ..."
  Ascii41@931..932 ")"
  Ascii59@932..933 ";"

