crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@464.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_power_10_ln VALUES (4,'861542720105376650266753999919217194383259935058507531116.774511336660822591851369622743235084609149542494189385785321912210129989390054947787009383210009523204976629456268332186620016067379702483800883493431423160815760933380418976582725913410929214462739708321325884209636272001805871036779154087677637129248122540412937033791526383240502286607736226090213753913654673523613612439527815137888202973659987501649474772884055648603290154867585312925699571949539600328906295652872654314913539778815035321695215634102441494403825526533235061083947035338872599854931230001361227174477274708230470794066733245241594719912710139298949856243576688344051439047966427547889756037265151798639614843866387316916203238068277912991427278268083231579195846744438643659745041780103653332041031419793815914447232121937821142169172566753399257291244398531365781832297786941359729799400');"
---
InsertStmt@0..914
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..31
    Ident@12..31 "num_exp_power_10_ln"
  Whitespace@31..32 " "
  SelectStmt@32..912
    Values@32..38 "VALUES"
    Whitespace@38..39 " "
    Ascii40@39..40 "("
    List@40..912
      AConst@40..41
        Iconst@40..41 "4"
      Ascii44@41..42 ","
      AConst@42..912
        Sconst@42..912 "'86154272010537665026 ..."
  Ascii41@912..913 ")"
  Ascii59@913..914 ";"

