crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@465.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_power_10_ln VALUES (5,'198021976607570296508.271597639984889464620426933601643322058775615235389194561064983706229795978402690473201671702614911129095149240715527556855309177671128442458698638704394974473956869419481315262823632891676087912529523219333012290621046361106033860210270638559271706082115529424772192777643046125905852037759566224116373416253787241195450409652089019290072319861181399387753223422998872180810295299831487867222464355713552301775702554189470264147325049133532522718679336524769566984150923939420759804463781082299907043016120177416779442865059261387111806785876531152192378576258351599534512031062777609734092707165605364139201322351960602280089186180302246827234844736393745487324460438448807241887783263546165171099497316415863122023114646876909575845860402164818094500541234974716577550807551946414081410743197768993152975501');"
---
InsertStmt@0..878
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..31
    Ident@12..31 "num_exp_power_10_ln"
  Whitespace@31..32 " "
  SelectStmt@32..876
    Values@32..38 "VALUES"
    Whitespace@38..39 " "
    Ascii40@39..40 "("
    List@40..876
      AConst@40..41
        Iconst@40..41 "5"
      Ascii44@41..42 ","
      AConst@42..876
        Sconst@42..876 "'19802197660757029650 ..."
  Ascii41@876..877 ")"
  Ascii59@877..878 ";"

